Update UI components and styles for consistency
Refactored multiple Blade component views and updated related CSS and JS assets for improved UI consistency and maintainability. Changes affect button, card, checkbox, input, listview, modal, pagination, select, table, tabs, and toggle components, as well as their supporting styles and scripts.

--- a/resources/assets/css/input.css
+++ b/resources/assets/css/input.css
@@ -12,15 +12,15 @@
     .bw-textarea,
     .bw-raw-select,
     .bw-input { /* !outline-none ! */
-        @apply w-full text-slate-600 dark:text-dark-300 !ring-0 dark:bg-transparent focus:outline-2 rounded-md text-sm
-        focus:-outline-offset-1 dark:placeholder-dark-400/60 transition-all tracking-wide px-3 py-[8.5px] placeholder-primary-900/40
+        @apply w-full text-gray-600 dark:text-dark-300 !ring-0 dark:bg-transparent rounded-md text-sm
+        focus:-outline-offset-1 focus:outline-2 dark:placeholder-dark-400/60 transition-all tracking-wider
+        px-3 py-[8.5px] placeholder-primary-900/40
     }
 
     .bw-textarea:not(.has-error),
     .bw-raw-select:not(.has-error),
-    .bw-select .clickable:not(.has-error),
     .bw-input:not(.has-error) {
-        @apply border-slate-400/60 hover:border-slate-400 dark:border-dark-600 dark:hover:border-dark-500/50 dark:focus:border-dark-500
+        @apply border-gray-400/60 hover:border-gray-400 dark:border-dark-600 dark:hover:border-dark-500/50
     }
 
     .bw-textarea.has-error,
@@ -31,7 +31,7 @@
     }
 
     .bw-input[disabled], .bw-input[readonly], fieldset[disabled] .bw-input {
-        @apply !bg-gray-100/60 dark:!bg-white/10 dark:!opacity-40 !text-slate-400/70 dark:!text-dark-400
+        @apply !bg-gray-100/60 dark:!bg-white/10 dark:!opacity-40 !text-gray-400/70 dark:!text-dark-400
         cursor-not-allowed dark:!border-dark-500/70
     }
 
@@ -54,9 +54,8 @@
     .form-label {
         @apply
         absolute cursor-text left-3 rtl:!right-3 rtl:left-[unset] !inline-block -top-2 text-sm px-1 transition-all
-        peer-placeholder-shown:top-[10.2px] peer-focus:-top-2 bg-white text-primary-900/40 dark:text-dark-400/60
-        z-20 dark:bg-dark-700 dark:px-2 dark:rounded-md dark:py-0.5 tracking-wide
-        /*dark-800*/
+        peer-placeholder-shown:top-[10.2px] peer-focus:-top-2 bg-white text-primary-900/40 dark:text-dark-300/50
+        z-20 dark:bg-dark-700/95 dark:px-2 dark:rounded-md dark:py-0.5 tracking-wider
     }
 
     .form-label.small {
@@ -75,11 +74,11 @@
     }
 
     .bw-select div.clickable.disabled, .bw-select div.clickable.readonly, fieldset[disabled] .bw-select {
-        @apply !bg-gray-100/60 opacity-95 dark:opacity-70 dark:!bg-white/5 select-none cursor-not-allowed
+        @apply !bg-gray-100/60 opacity-95 dark:opacity-40 !border-opacity-40 dark:!bg-dark-300/5 select-none cursor-not-allowed
     }
 
     .bw-select div.clickable.enabled {
-        @apply focus:border-primary-600 dark:focus:border-dark-500 cursor-pointer
+        @apply cursor-pointer border dark:bg-transparent border-gray-400/60 hover:border-gray-400 dark:border-dark-600 dark:hover:border-dark-500/50 focus:-outline-offset-1 focus:outline-2 focus:border-2
     }
 
     .prefix svg, .suffix svg {
@@ -87,7 +86,7 @@
     }
 
     .ql-toolbar.ql-snow {
-        @apply !rounded-t-lg !border-2 !border-slate-300/50 dark:!border-dark-600 dark:!bg-transparent
+        @apply !rounded-t-lg !border-2 !border-gray-300/50 dark:!border-dark-600 dark:!bg-transparent
     }
 
     .ql-toolbar.ql-snow .ql-stroke, .ql-stroke.ql-thin {
@@ -99,11 +98,11 @@
     }
 
     .ql-container.ql-snow {
-        @apply !rounded-b-lg !border-2 !border-slate-300/50 dark:!border-dark-600 dark:!bg-transparent
+        @apply !rounded-b-lg !border-2 !border-gray-300/50 dark:!border-dark-600 dark:!bg-transparent
     }
 
     .ql-editor.ql-blank::before {
-        @apply !text-slate-300 dark:!text-dark-400/60 !not-italic
+        @apply !text-gray-300 dark:!text-dark-400/60 !not-italic
     }
 
 }
