Update table styles and Blade component
Refined table styles in table.css and updated the table Blade component for improved appearance and consistency. These changes enhance the visual presentation and usability of tables in the application.

--- a/resources/assets/css/table.css
+++ b/resources/assets/css/table.css
@@ -47,6 +47,10 @@
         @apply uppercase
     }
 
+    .bw-table-filter-bar-unhinged input {
+        @apply border-0 bg-transparent focus:outline-0 focus:border-0 !mb-0
+    }
+
     .bw-table-filter-bar {
         @apply bg-slate-200/50 dark:bg-dark-800/80 rounded-t-lg
     }
